Check and delete todo

--- a/style.css
+++ b/style.css
@@ -80,3 +80,16 @@ form button:hover {
 .complete-btn {
     background-color: #49cc49;
 }
+
+.todo-item {
+    padding: 0rem 0.5rem;
+}
+
+.fa-trash,
+.fa-check {
+    pointer-events: none;
+}
+
+.completed {
+    text-decoration: line-through;
+}
